# lumina-mcp-router

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build.yml
k8s/: configmap.yaml  deployment.yaml  service.yaml
src/lumina_mcp_router/: __init__.py  __main__.py  backends.py  config.py  embedder.py  http.py  index.py  server.py  tool_cache.py  tools.py
tests/: conftest.py  test_backends.py  test_embedder.py  test_event_driven_reconnect.py  test_index.py  test_reconnect.py  test_tool_cache.py  test_tools.py
